# ray-tracer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  test.cpp  test_manual.cpp
documentation/: gtest.md
documentation/explanation/: Architecture.md  Camera.md  DataOrientedDesign.md  PhongReflectionModel.md  RayPlaneIntersectionAlgorithm.md  RaySphereIntersectionAlgorithm.md  Shadows.md  ViewTransformation.md  architecture.md
documentation/how-to/: AddNewPrimitive.md  EnvironmentSetup.md  ProfileCode.md  RunTests.md  WriteTests.md  run_tests.md
documentation/reference/: core_math.md
documentation/references/: C++Architecture.md  C++ImplementationDetails.md  CoreMath.md  DocstringGuidelines.md
documentation/tutorials/: EnvironmentSetup.md  GettingStarted.md  MultithreadingGuide.md  getting_started.md
includes/: Canvas.hpp  Colors.hpp  Matrix.hpp  Transformations.hpp  Tuple.hpp  Utils.hpp
renders/: README.md
src/: Canvas.cpp  Canvas.cppm  Colors.cpp  Colors.cppm  Intersection.cppm  Lights.cppm  Materials.cppm  Matrix.cpp  Matrix.cppm  Ray.cppm  Shading.cppm  Shapes.cppm  Transformations.cpp  Transformations.cppm  Tuple.cpp  Tuple.cppm  Tuple.h  Tuple.hpp  Utils.cpp  Utils.cppm
src/core/: Canvas.cpp  Canvas.cppm  Colors.cpp  Colors.cppm
src/math/: Matrix.cppm  Transformations.cpp  Transformations.cppm  Tuple.cpp  Tuple.cppm  Utils.cpp  Utils.cppm
src/scene/: Camera.cpp  Camera.cppm  Intersection.cpp  Intersection.cppm  Lights.cpp  Lights.cppm  Materials.cpp  Materials.cppm  Plane.cpp  Plane.cppm  Ray.cpp  Ray.cppm  Shading.cpp  Shading.cppm  ShapeBase.cpp  ShapeBase.cppm  Shapes.cpp  Shapes.cppm  Sphere.cpp  Sphere.cppm  World.cpp  World.cppm
tests/: Camera.t.cpp  Canvas.t.cpp  CanvasTests.cpp  Colors.t.cpp  ColorsTests.cpp  Intersection.t.cpp  Lights.t.cpp  Materials.t.cpp  MatrixOperations.t.cpp  MatrixOperationsTests.cpp  MatrixTests.cpp  MatrixTransformations.t.cpp  MatrixTransformationsTests.cpp  Plane.t.cpp  Ray.t.cpp  RayTests.cpp  Shading.t.cpp  Shapes.t.cpp  Sphere.t.cpp  Tuple.t.cpp  TupleTests.cpp  World.t.cpp
visualizers/: 1.ProjectTrajectory.cpp  10.PlaneScene.cpp  2.ClockMarkers.cpp  3.ConsoleIntersectionCheck.cpp  3.SphereRayCast.cpp  3.SphereShadow.cpp  4.MultipleSphereShadows.cpp  4.SpherePhongReflection.cpp  4.SphereShadow.cpp  5.MultipleSpherePhongReflections.cpp  5.MultipleSphereShadows.cpp  5.SpherePhongReflection.cpp  6.MultipleSpherePhongReflections.cpp  6.SpherePhongReflection.cpp  7.MatrixTransformations.cpp  7.MultipleSpherePhongReflections.cpp  7.Playground.cpp  8.FirstScene.cpp  9.ShadowScene.cpp  ClockMarkers.cpp  ProjectTrajectory.cpp  SpherePhongReflection.cpp  SphereShadow.cpp  clock_markers.cpp  project_trajectory.cpp  projectile.cpp
